添加必要注释